<resources>
    <string name="app_name">MvpExample</string>

    <!--Navigation Menu-->
    <string name="movie_now_playing">Movie</string>
    <string name="Tv">TV Show</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Warning_Username">*Please enter your username</string>
    <string name="Warning_password">*Please enter your password</string>
    <string name="name_me">Muhamad Syafii</string>

    //Name RecycleView
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Ranted</string>
    <string name="upcoming">Upcoming</string>
    <string name="see_all">See All</string>

</resources>
