<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <TextView
        android:id="@+id/tv_warningUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Warning_Username"
        android:textColor="@android:color/holo_red_light" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_warningPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/Warning_password"
        android:textColor="@android:color/holo_red_light" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_grey"
        android:text="@string/login"
        android:textColor="@color/white" />
</LinearLayout>