<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mSwipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyDark"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/mHomeSlider"
                android:layout_width="match_parent"
                android:layout_height="160dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mTitleNowPlaying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/now_playing"
                    android:textColor="@color/orange" />

                <TextView
                    android:id="@+id/mDetailNowPlaying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/see_all"
                    android:textColor="@color/cream" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mRecyclerViewNowPlaying"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mTitleNowPlaying"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_movie" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mTitleTopRated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/top_rated"
                    android:textColor="@color/orange" />

                <TextView
                    android:id="@+id/mDetailTopRated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/see_all"
                    android:textColor="@color/cream" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mRecyclerViewTopRated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mTitleTopRated"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mTitlePopular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/popular"
                    android:textColor="@color/orange" />

                <TextView
                    android:id="@+id/mDetailPopular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/see_all"
                    android:textColor="@color/cream" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mRecyclerViewPopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mTitlePopular"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>